Quick CSS Fix for map not rendering on IE7 due to lack of support for CSS property 'inherit'

--- a/Our.Umbraco.GoogleMaps/Controls/GoogleMap.css
+++ b/Our.Umbraco.GoogleMaps/Controls/GoogleMap.css
@@ -26,5 +26,5 @@
 {
 	clear: both;
 	height: 375px;
-	width: inherit;
+	width: 461px;
 }
